WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29945
Read-only transactions should not trigger quota updates
https://bugs.webkit.org/show_bug.cgi?id=29945
Summary
Read-only transactions should not trigger quota updates
Dumitru Daniliuc
Reported
2009-09-30 18:08:36 PDT
Read-only transactions do not change the size of the DB file (guaranteed by the database authorizer), and therefore do not need to trigger quota updates.
Attachments
patch
(2.31 KB, patch)
2009-09-30 18:10 PDT
,
Dumitru Daniliuc
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dumitru Daniliuc
Comment 1
2009-09-30 18:10:05 PDT
Created
attachment 40414
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2009-10-01 08:17:28 PDT
Comment on
attachment 40414
[details]
patch r=me.
WebKit Commit Bot
Comment 3
2009-10-01 08:26:49 PDT
Comment on
attachment 40414
[details]
patch Clearing flags on attachment: 40414 Committed
r48973
: <
http://trac.webkit.org/changeset/48973
>
WebKit Commit Bot
Comment 4
2009-10-01 08:26:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug