2009-10-01  Dumitru Daniliuc  <dumi@chromium.org>

Reviewed by Dimitri Glazkov.

        Read-only transactions do not change file sizes and therefore
        should not trigger quota updates.

        https://bugs.webkit.org/show_bug.cgi?id=29945

        * storage/SQLTransaction.cpp:
        (WebCore::SQLTransaction::openTransactionAndPreflight):
        (WebCore::SQLTransaction::runStatements):

Canonical link: https://commits.webkit.org/40532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48973 268f45cc-cd09-0410-ab3c-d52691b4dbfc